src-ken&y/objects/Fixed_Asset__c.object
<CustomObject>
    <customHelpPage>HelpFixedAssets</customHelpPage>
    <description>Stores the companies fixed assets for tracking and depreciation</description>
    <fields>
        <fullName>Accounting_Segment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Accounting Default</description>
        <label>Accounting Segment</label>
        <referenceTo>Accounting_Default__c</referenceTo>
        <relationshipLabel>Fixed Assets</relationshipLabel>
        <relationshipName>Fixed_Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Accumulated_Depreciation_GL_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Accumulated Depreciation GL Account</label>
        <referenceTo>GL_Account__c</referenceTo>
        <relationshipLabel>Fixed Assets (Accumulated Depreciation GL Account)</relationshipLabel>
        <relationshipName>Accumulated_Fixed_Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Acquisition_Cost__c</fullName>
        <description>Total cost to place asset in to service.</description>
        <inlineHelpText>stated in functional currency</inlineHelpText>
        <label>Acquisition Cost</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agreement</label>
        <referenceTo>Agreement__c</referenceTo>
        <relationshipLabel>Fixed Assets</relationshipLabel>
        <relationshipName>Fixed_Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Asset_Class_Rule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Asset Class Rule</description>
        <label>Asset Class Rule</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Company__c</field>
                <operation>equals</operation>
                <valueField>Asset_Class_Rule__c.Company__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Asset_Class_Rule__c</referenceTo>
        <relationshipLabel>Fixed Assets</relationshipLabel>
        <relationshipName>Fixed_Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Asset_Class__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Asset classfication.</description>
        <label>Asset Class</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Asset_Class__c.Company__c</field>
                <operation>equals</operation>
                <valueField>$Source.Company__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Asset_Class__c</referenceTo>
        <relationshipLabel>Fixed Assets</relationshipLabel>
        <relationshipName>Fixed_Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Asset_Tag_Number__c</fullName>
        <description>Tag number used for identifying a specific asset.</description>
        <label>Asset Tag Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Book_Value__c</fullName>
        <description>This is the current value of the asset less the accumulated depreciation.</description>
        <formula>(Acquisition_Cost__c + Total_Adjustments__c) -Total_Depreciated_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The current value of the asset, less the accumulated depreciation. The amount is stated in functional currency.</inlineHelpText>
        <label>Book Value</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>Company__c</referenceTo>
        <relationshipLabel>Fixed Assets</relationshipLabel>
        <relationshipName>Fixed_Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Last_Depreciated__c</fullName>
        <description>Date asset was last depreciated.</description>
        <label>Date Last Depreciated</label>
        <summarizedField>Fixed_Asset_Depreciation__c.Depreciation_Date__c</summarizedField>
        <summaryForeignKey>Fixed_Asset_Depreciation__c.Fixed_Asset__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Date_Purchased__c</fullName>
        <description>Date this asset was purchased.</description>
        <label>Date Purchased</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Declining_Balance__c</fullName>
        <inlineHelpText>Depends on the &quot;Depreciation Method&quot;. Can be either a percentage or &quot;Straight Line&quot; if MACRS is the depreciation method.</inlineHelpText>
        <label>Declining Balance</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Depreciation_Method__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>200%</fullName>
                </value>
                <value>
                    <fullName>150%</fullName>
                </value>
                <value>
                    <fullName>Straight Line</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Depreciable_Basis__c</fullName>
        <formula>(Acquisition_Cost__c + Total_Adjustments__c) -Residual_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>stated in functional currency</inlineHelpText>
        <label>Depreciable Basis</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Depreciation_Convention__c</fullName>
        <inlineHelpText>Depends on &quot;Depreciation Period&quot;.</inlineHelpText>
        <label>Depreciation Convention</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Depreciation_Period__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Mid Month</fullName>
                </value>
                <value>
                    <fullName>Full Month</fullName>
                </value>
                <value>
                    <fullName>Mid Quarter</fullName>
                </value>
                <value>
                    <fullName>Full Quarter</fullName>
                </value>
                <value>
                    <fullName>Half Year</fullName>
                </value>
                <value>
                    <fullName>Full Year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Depreciation_Count__c</fullName>
        <description>The total number of times depreciation has been applied to this Fixed Asset.</description>
        <inlineHelpText>The total number of times depreciation has been applied to this Fixed Asset.</inlineHelpText>
        <label>Depreciation Count</label>
        <summaryFilterItems>
            <field>Fixed_Asset_Depreciation__c.Subtransaction_Type__c</field>
            <operation>equals</operation>
            <value>Depreciation</value>
        </summaryFilterItems>
        <summaryForeignKey>Fixed_Asset_Depreciation__c.Fixed_Asset__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Depreciation_Life__c</fullName>
        <description>Number of months over which this asset is to be depreciated.</description>
        <inlineHelpText>Number of months over which this asset is to be depreciated.</inlineHelpText>
        <label>Depreciation Life in Months</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Depreciation_Method__c</fullName>
        <description>The method that is used to model the assets depreciation.</description>
        <inlineHelpText>The method that is used to model the asset&apos;s depreciation.</inlineHelpText>
        <label>Depreciation Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Straight Line</fullName>
                </value>
                <value>
                    <fullName>Declining Balance</fullName>
                </value>
                <value>
                    <fullName>Sum of Years</fullName>
                </value>
                <value>
                    <fullName>MACRS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Depreciation_Period__c</fullName>
        <description>The time period between depreciation cycles for this asset.</description>
        <inlineHelpText>The time period between depreciation cycles for this asset.</inlineHelpText>
        <label>Depreciation Period</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Depreciation_Method__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Annually</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Descriptiont of asset.</description>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disposition_Action__c</fullName>
        <description>The disposition action that was taken when the asset reached the end of it&apos;s useful life.</description>
        <label>Disposition Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sold</fullName>
                </value>
                <value>
                    <fullName>Abandoned</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Disposition_Date__c</fullName>
        <description>Date asset is sold or taken out of service.</description>
        <label>Disposition Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Employee__c</fullName>
        <label>Employee</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimated_End_of_Life__c</fullName>
        <description>In Service Date plus the number of months specified in Depreciation Life.</description>
        <inlineHelpText>The &quot;In Service Date&quot; plus the number of months specified in &quot;Depreciation Life&quot;.</inlineHelpText>
        <label>Estimated End of Life</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expense_GL_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Expense GL Account - The depreciated value of the asset will be debited from this GL account at each depreciation cycle. Note: The Accumulated Depreciation GL account is defined in the accounting rules.</description>
        <inlineHelpText>The depreciated value of the asset is debited from this GL account at each depreciation cycle. Note that the Accumulated Depreciation GL account is defined in the accounting rules.</inlineHelpText>
        <label>Expense GL Account</label>
        <referenceTo>GL_Account__c</referenceTo>
        <relationshipLabel>Fixed Assets (Expense GL Account)</relationshipLabel>
        <relationshipName>Expense_Fixed_Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Final_Depreciation_Date__c</fullName>
        <description>This is the date that the final depreciation is assessed to the asset.</description>
        <label>Final Depreciation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fixed_Asset_Key__c</fullName>
        <externalId>true</externalId>
        <label>Fixed Asset Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Fixed_Asset_Type__c</fullName>
        <inlineHelpText>Can be either &quot;Tax&quot; or &quot;Accounting&quot;.</inlineHelpText>
        <label>Fixed Asset Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accounting</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Tax</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fixed_Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link the relevant corporate book tax asset when creating a fixed asset for tax book purposes</description>
        <inlineHelpText>Link the relevant corporate book tax asset when creating a fixed asset for tax book purposes</inlineHelpText>
        <label>Fixed Asset (Corporate Book)</label>
        <referenceTo>Fixed_Asset__c</referenceTo>
        <relationshipLabel>Fixed Assets (Tax Books)</relationshipLabel>
        <relationshipName>Tax_Books</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Functional_Currency__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Functional Currency</label>
        <referenceTo>Currency__c</referenceTo>
        <relationshipLabel>Fixed Assets (Functional Currency)</relationshipLabel>
        <relationshipName>Fixed_Assets</relationshipName>
        
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GL_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Fixed Asset GL Account -  The full acquisition cost of the asset will be debited from this GL account when the asset is first activated.</description>
        <inlineHelpText>The full acquisition cost of the asset is debited from this GL account when the asset is first activated.</inlineHelpText>
        <label>Fixed Asset GL Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>GL_Account__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>GL_Account__c</referenceTo>
        <relationshipLabel>Fixed Assets</relationshipLabel>
        <relationshipName>Fixed_Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>In_Service_Date__c</fullName>
        <description>Date this asset was put in to service.</description>
        <label>In Service Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Item__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Item</label>
        <referenceTo>Item__c</referenceTo>
        <relationshipLabel>Fixed Assets</relationshipLabel>
        <relationshipName>Fixed_Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The physical location of the asset.</description>
        <label>Location</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Fixed Assets</relationshipLabel>
        <relationshipName>Fixed_Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Name_Hyperlink__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; Id, Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name Hyperlink</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Depreciation_Date__c</fullName>
        <description>The next scheduled date that depreciation will be assessed to this asset.</description>
        <label>Next Depreciation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Parent_Adjustments__c</fullName>
        <description>The total adjustments from the parent Fixed Asset</description>
        <formula>Fixed_Asset__r.Total_Adjustments__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Adjustments</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent_Fixed_Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Relates to a parent fixed asset.</description>
        <label>Parent Fixed Asset</label>
        <referenceTo>Fixed_Asset__c</referenceTo>
        <relationshipLabel>Fixed Assets (Parent Fixed Asset)</relationshipLabel>
        <relationshipName>Fixed_Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Property_Class__c</fullName>
        <label>Property Class</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Property_Type__c</fullName>
        <label>Property Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Own</fullName>
                </value>
                <value>
                    <fullName>Lease</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prorate_First_Period__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Prorate Fixed Asset Depreciation Based on Service Date and Days Remaining in Period</description>
        <inlineHelpText>Prorate Fixed Asset Depreciation Based on Service Date and Days Remaining in Period</inlineHelpText>
        <label>Prorate First Period</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Purchase_Order_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Purchase Order Line</description>
        <label>Purchase Order Line</label>
        <referenceTo>Purchase_Order_Line__c</referenceTo>
        <relationshipLabel>Fixed Assets</relationshipLabel>
        <relationshipName>Fixed_Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Purchase_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Purchase OrderAC.</description>
        <label>Purchase Order</label>
        <referenceTo>Purchase_Order__c</referenceTo>
        <relationshipLabel>Fixed Assets</relationshipLabel>
        <relationshipName>Fixed_Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Purchase_Price__c</fullName>
        <description>Purchase Price of asset.</description>
        <label>Purchase Price</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Purchase_currency__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Purchase Currency</label>
        <referenceTo>Currency__c</referenceTo>
        <relationshipLabel>Fixed Assets (Purchase currency)</relationshipLabel>
        <relationshipName>Fixed_Assets1</relationshipName>
        
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Residual_Value__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Residual value of the asset at the end of its useful life.</description>
        <inlineHelpText>Residual value of the asset at the end of its service life. The amount is stated in functional currency.</inlineHelpText>
        <label>Residual Value</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Retirement_Date__c</fullName>
        <label>Retirement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Retirement_Type__c</fullName>
        <label>Retirement Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Retire</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Return to Inventory</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SIL_Item_Id__c</fullName>
        <formula>Supplier_Invoice_Line__r.Item__r.Id</formula>
        <label>SIL Item Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Serial_Number__c</fullName>
        <label>Serial Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_To__c</fullName>
        <inlineHelpText>If the &quot;Disposition Action&quot; was &quot;Sold&quot;, this field displays the name of the entity that purchased the asset.</inlineHelpText>
        <label>Sold To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Standard_Cost__c</fullName>
        <label>Standard Cost</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Defines the status of the asset during its lifecycle. Specifies if the asset is inactive, active or fully depreciated.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>CIP</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Depreciated</fullName>
                </value>
                <value>
                    <fullName>Retired</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Supplier_Invoice_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supplier Invoice Line</label>
        <referenceTo>Supplier_Invoice_Line__c</referenceTo>
        <relationshipLabel>Fixed Assets</relationshipLabel>
        <relationshipName>Fixed_Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Supplier_Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supplier Invoice</label>
        <referenceTo>Supplier_Invoice__c</referenceTo>
        <relationshipLabel>Fixed Assets</relationshipLabel>
        <relationshipName>Fixed_Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Supplier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Supplier.</description>
        <label>Supplier</label>
        <referenceTo>Supplier__c</referenceTo>
        <relationshipLabel>Fixed Assets</relationshipLabel>
        <relationshipName>Fixed_Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tax_Book__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Book</description>
        <label>Book</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Company__c</field>
                <operation>equals</operation>
                <valueField>Tax_Book__c.Company__r.Id</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Tax_Book__c</referenceTo>
        <relationshipLabel>Fixed Assets</relationshipLabel>
        <relationshipName>Fixed_Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Adjustments__c</fullName>
        <description>The sum of all adjustments made to the Fixed Asset</description>
        <inlineHelpText>stated in functional currency</inlineHelpText>
        <label>Total Finalized Adjustments</label>
        <summarizedField>Fixed_Asset_Adjustment__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Fixed_Asset_Adjustment__c.Finalized__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Fixed_Asset_Adjustment__c.Type__c</field>
            <operation>notEqual</operation>
            <value>Acquisition</value>
        </summaryFilterItems>
        <summaryForeignKey>Fixed_Asset_Adjustment__c.Fixed_Asset__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Depreciated_Value__c</fullName>
        <description>Total Depreciation from all Fixed Asset Depreciations</description>
        <inlineHelpText>stated in functional currency</inlineHelpText>
        <label>Total Depreciated Value</label>
        <summarizedField>Fixed_Asset_Depreciation__c.Depreciation_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Fixed_Asset_Depreciation__c.Subtransaction_Type__c</field>
            <operation>equals</operation>
            <value>Depreciation</value>
        </summaryFilterItems>
        <summaryForeignKey>Fixed_Asset_Depreciation__c.Fixed_Asset__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Units__c</fullName>
        <label>Units</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Warranty_Expiration_Date__c</fullName>
        <description>Warranty expiration date.</description>
        <label>Warranty Expiration Date</label>
        <type>Date</type>
    </fields>
    <label>Fixed Asset</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Company__c</columns>
        <columns>Parent_Fixed_Asset__c</columns>
        <columns>Asset_Class__c</columns>
        <columns>Asset_Tag_Number__c</columns>
        <columns>In_Service_Date__c</columns>
        <columns>Acquisition_Cost__c</columns>
        <columns>Tax_Book__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>CIP</fullName>
        <columns>NAME</columns>
        <columns>Company__c</columns>
        <columns>Asset_Class__c</columns>
        <columns>Acquisition_Cost__c</columns>
        <columns>Total_Adjustments__c</columns>
        <columns>In_Service_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>CIP</value>
        </filters>
        <label>CIP</label>
    </listViews>
    <nameField>
        <label>Fixed Asset Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fixed Assets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Acquisition_Cost_Cannot_Be_Negative</fullName>
        <active>true</active>
        <description>You cannot have a negative acquisition cost.</description>
        <errorConditionFormula>Acquisition_Cost__c &lt; 0</errorConditionFormula>
        <errorDisplayField>Acquisition_Cost__c</errorDisplayField>
        <errorMessage>You cannot have a negative acquisition cost.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_Depreciation_Conv_with_Prorate</fullName>
        <active>true</active>
        <description>2b) The option can only be selected when the Depreciation Convention is Full Month.</description>
        <errorConditionFormula>ISPICKVAL(Depreciation_Convention__c, &apos;Mid Month&apos;) 
   &amp;&amp; Prorate_First_Period__c = true</errorConditionFormula>
        <errorDisplayField>Prorate_First_Period__c</errorDisplayField>
        <errorMessage>The Prorate  option can only be selected when the Depreciation Convention is Full Month.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Depr_Period_is_Monthly_for_Prorate</fullName>
        <active>true</active>
        <description>The Prorate option can only be selected when the Depreciation Period is Monthly</description>
        <errorConditionFormula>Prorate_First_Period__c = true &amp;&amp; 
					   ( ISPICKVAL(Depreciation_Period__c, &apos;Quarterly&apos;) ||
					    ISPICKVAL(Depreciation_Period__c, &apos;Annually&apos;) )</errorConditionFormula>
        <errorMessage>The Prorate option can only be selected when the Depreciation Period is Monthly</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Depreciable_Basis_cannot_be_negative</fullName>
        <active>true</active>
        <description>You cannot have a negative depreciable basis on a Fixed Asset.</description>
        <errorConditionFormula>Depreciable_Basis__c &lt; 0</errorConditionFormula>
        <errorMessage>You cannot have a negative depreciable basis on a Fixed Asset.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_Prorate_after_asset_depreciation</fullName>
        <active>true</active>
        <description>The user should be blocked from selecting prorate checkbox if the asset has already depreciated</description>
        <errorConditionFormula>AND(
 ISCHANGED(Prorate_First_Period__c),
 NOT(ISBLANK(Date_Last_Depreciated__c)),
 Prorate_First_Period__c = true ,
 Total_Depreciated_Value__c!=0)</errorConditionFormula>
        <errorDisplayField>Prorate_First_Period__c</errorDisplayField>
        <errorMessage>Pro-rate can only be done before the first depreciation. please Roll Back depreciation and try again</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Residual_Value_can_not_be_null</fullName>
        <active>true</active>
        <errorConditionFormula>ISNULL(Residual_Value__c)</errorConditionFormula>
        <errorMessage>Please enter a value for Residual Value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>The_Fixed_asset_company_must_match_the_f</fullName>
        <active>true</active>
        <description>The Fixed asset company must match the fixed asset class company</description>
        <errorConditionFormula>IF(ISNULL(Asset_Class__c) = FALSE &amp;&amp; Asset_Class__r.Company__c != Company__c, TRUE, FALSE)</errorConditionFormula>
        <errorMessage>The Fixed asset company must match the fixed asset class company</errorMessage>
    </validationRules>
</CustomObject>